test/files/neg/t2991/scam_2.scala

trait Scam {
  def f = new Jamb_1().k(42, true, false)
}
